# escripts

./: README.md  pyproject.toml
escripts/: __init__.py  __main__.py  banco.py  mail.py
