[tool.poetry]
name = "escripts"
version = "0.0.1"
description = "Argparse, Poetry e algums scripts na linha de comando para testes."
authors = ["djangonauta <igbrch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
isort = "^5.12.0"

[tool.poetry.scripts]
escripts = 'escripts:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
