[tool.poetry]
name = "escripts"
version = "0.0.3"
description = "Argparse, Poetry e algums scripts na linha de comando para testes."
authors = ["djangonauta <igbrch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
bpython = "^0.24"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
escripts = 'escripts:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
